--- a/catalog.css
+++ b/catalog.css
@@ -21,12 +21,10 @@ p{
     
 }
 nav {
-    
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
     background-color: rgb(108, 97, 83);
 }
 
@@ -39,16 +37,18 @@ nav a {
     transition: 0.3s;
 }
 
-h2{
-    text-shadow: 3px 0 10px rgba(65, 65, 65);
-    margin-top: 50px;
-}
 nav a:hover{
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), /* Основний ефект підсвічування */
                0 0 20px rgba(255, 255, 255, 0.6), /* Додатковий ефект */
                0 0 30px ;
-    color: black;
+    color: white;
 }
+
+h2{
+    text-shadow: 3px 0 10px rgba(65, 65, 65);
+    margin-top: 50px;
+}
+
 
 .menu{
     padding-top: 20px;
@@ -56,6 +56,7 @@ nav a:hover{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding-bottom: 50px;
 }
 .str{
     width: 45%;
@@ -67,4 +68,81 @@ img{
     width: 100%;
     border-radius: 5px;
     box-shadow: 0 0 5px 0 rgba(65, 65, 65);
+}
+
+footer {
+    background-color: rgb(108, 97, 83);
+    color: white;
+    padding:  20px 0px;
+    text-align: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    
+}
+footer p{
+    width:auto;
+    text-align: center;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    
+    flex-wrap: wrap;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer-nav {
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+.footer-nav a{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    font-size: 20px;
+    color: rgb(176, 140, 93);
+    transition: 0.3s;
+}
+
+
+.footer-nav a:hover{
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), /* Основний ефект підсвічування */
+               0 0 20px rgba(255, 255, 255, 0.6), /* Додатковий ефект */
+               0 0 30px ;
+    color: white;
+}
+
+.footer-social {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    
+}
+
+.social-icon {
+
+    color: rgb(176, 140, 93);
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.social-icon:hover {
+    color: rgb(255, 255, 255);
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 
+               0 0 20px rgba(255, 255, 255, 0.6),
+               0 0 30px rgba(255, 255, 255, 0.4);
 }
